<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Contacts</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="birth_date">Birth date</string>
    <string name="save">Save</string>
    <string name="register_successful">Registration successful</string>
    <string name="logout">Logout</string>
    <string name="message">Message</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send">Send</string>
    <string name="message_sent">Message sent successfully!</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="new_contact">New contact</string>
    <string name="contact_added">Contact added</string>
    <string name="delete">Delete</string>
    <string name="select_contacts_remove">Select contacts to delete</string>
</resources>
